Thu Nov  2 10:06:08 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Apply
	yesterday's optimization to DecimateVertex too.

Wed Nov  1 18:04:40 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Some edges
	cannot be contracted because of geometry or topology reasons.  A
	penalty is now added to these edges so that they are not processed
	too much often.  They must not be discarded entirely because they
	may be contracted later if their neighboorhood changes.

Tue Oct 31 23:39:49 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Metric3D.java: New det() method.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Improve
	handling of degenerated cases.

Tue Oct 31 11:30:01 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java
	  src/org/jcae/mesh/oemm/IndexedStorage.java
	  src/org/jcae/mesh/xmldata/MeshWriter.java: Define Mesh.triangleList
	as a Collection so that algorithms can choose to use an HashSet to
	speed up triangle removal.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (clone): Optimization:
	Construct param[] only if needed.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java
	  src/org/jcae/mesh/amibe/metrics/Matrix3D.java
	  src/org/jcae/mesh/amibe/metrics/Metric3D.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Store
	  Matrix3D.data in a double[9] array instead of double[3][3] for
	  efficiency reasons.  New Quadric3DError class, to refactor code
	  in Decimate* algorithms.

Mon Oct 30 23:09:36 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (isValid): Check that symmetric
	OTriangle instances are consistent with respect to boundary tag.